packages/nci-engine/tests/snapshots/snapshot_tests__rust_class-instance.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "class-instance",
  "version": "1.0.0",
  "symbols": [
    {
      "id": "class-instance@1.0.0::User",
      "name": "User",
      "kind": 264,
      "kindName": "ClassDeclaration",
      "package": "class-instance",
      "filePath": "index.d.ts",
      "signature": "export declare class User {\n  constructor(name: string);\n\n  /** @since 1.1.0 */\n  readonly name: string;\n\n  /** @since 1.2.0 */\n  greet(): string;\n\n  /** @internal */\n  _internalMethod(): void;\n\n  static create(name: string): User;\n}",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "since": "1.0.0",
      "isInternal": false,
      "modifiers": [
        "declare",
        "export"
      ]
    },
    {
      "id": "class-instance@1.0.0::User.create",
      "name": "User.create",
      "parentSymbolId": "class-instance@1.0.0::User",
      "kind": 175,
      "kindName": "MethodDeclaration",
      "package": "class-instance",
      "filePath": "index.d.ts",
      "signature": "static create(name: string): User;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [
        "class-instance@1.0.0::User"
      ],
      "since": "1.0.0",
      "isInternal": false,
      "modifiers": [
        "static"
      ]
    },
    {
      "id": "class-instance@1.0.0::User.prototype._internalMethod",
      "name": "User.prototype._internalMethod",
      "parentSymbolId": "class-instance@1.0.0::User",
      "kind": 175,
      "kindName": "MethodDeclaration",
      "package": "class-instance",
      "filePath": "index.d.ts",
      "signature": "_internalMethod(): void;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "visibility": "internal",
      "since": "1.0.0",
      "isInternal": false
    },
    {
      "id": "class-instance@1.0.0::User.prototype.greet",
      "name": "User.prototype.greet",
      "parentSymbolId": "class-instance@1.0.0::User",
      "kind": 175,
      "kindName": "MethodDeclaration",
      "package": "class-instance",
      "filePath": "index.d.ts",
      "signature": "greet(): string;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "since": "1.2.0",
      "isInternal": false
    },
    {
      "id": "class-instance@1.0.0::User.prototype.name",
      "name": "User.prototype.name",
      "parentSymbolId": "class-instance@1.0.0::User",
      "kind": 173,
      "kindName": "PropertyDeclaration",
      "package": "class-instance",
      "filePath": "index.d.ts",
      "signature": "readonly name: string;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "since": "1.1.0",
      "isInternal": false
    }
  ],
  "totalSymbols": 5,
  "totalFiles": 1,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
