packages/nci-engine/tests/snapshots/snapshot_tests__rust_computed-properties.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "computed-properties",
  "version": "1.0.0",
  "symbols": [
    {
      "id": "computed-properties@1.0.0::Iterable",
      "name": "Iterable",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "computed-properties",
      "filePath": "index.d.ts",
      "signature": "export interface Iterable {\n  /** @since 1.1.0 */\n  [Symbol.iterator](): void;\n}",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [],
      "since": "1.0.0",
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "computed-properties@1.0.0::Iterable.[Symbol.iterator]",
      "name": "Iterable.[Symbol.iterator]",
      "kind": 174,
      "kindName": "MethodSignature",
      "package": "computed-properties",
      "filePath": "index.d.ts",
      "signature": "[Symbol.iterator](): void;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "since": "1.1.0",
      "isInternal": false
    },
    {
      "id": "computed-properties@1.0.0::Literals",
      "name": "Literals",
      "kind": 244,
      "kindName": "VariableStatement",
      "package": "computed-properties",
      "filePath": "index.d.ts",
      "signature": "declare const Literals: {\n  /** @since 3.1.0 */\n  [\"literal-key\"]: number;\n}",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "since": "3.0.0",
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "computed-properties@1.0.0::Literals.literal-key",
      "name": "Literals.literal-key",
      "parentSymbolId": "computed-properties@1.0.0::Literals",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "computed-properties",
      "filePath": "index.d.ts",
      "signature": "[\"literal-key\"]: number;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "since": "3.1.0",
      "isInternal": false
    },
    {
      "id": "computed-properties@1.0.0::Overloaded",
      "name": "Overloaded",
      "kind": 264,
      "kindName": "ClassDeclaration",
      "package": "computed-properties",
      "filePath": "index.d.ts",
      "signature": "export class Overloaded {\n  /** @since 1.0.0 */\n  [Symbol.iterator](): void;\n  /** @since 1.1.0 */\n  [Symbol.iterator](arg: number): void;\n}",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "computed-properties@1.0.0::Overloaded.prototype.[Symbol.iterator]",
      "name": "Overloaded.prototype.[Symbol.iterator]",
      "parentSymbolId": "computed-properties@1.0.0::Overloaded",
      "kind": 175,
      "kindName": "MethodDeclaration",
      "package": "computed-properties",
      "filePath": "index.d.ts",
      "signature": "[Symbol.iterator](): void;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "since": "1.0.0",
      "isInternal": false
    },
    {
      "id": "computed-properties@1.0.0::Overloaded.prototype.[Symbol.iterator]#2",
      "name": "Overloaded.prototype.[Symbol.iterator]",
      "parentSymbolId": "computed-properties@1.0.0::Overloaded",
      "kind": 175,
      "kindName": "MethodDeclaration",
      "package": "computed-properties",
      "filePath": "index.d.ts",
      "signature": "[Symbol.iterator](arg: number): void;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "since": "1.1.0",
      "isInternal": false
    },
    {
      "id": "computed-properties@1.0.0::Tagged",
      "name": "Tagged",
      "kind": 264,
      "kindName": "ClassDeclaration",
      "package": "computed-properties",
      "filePath": "index.d.ts",
      "signature": "export class Tagged {\n  /** @since 2.1.0 */\n  [Symbol.toStringTag]: string;\n}",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "since": "2.0.0",
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "computed-properties@1.0.0::Tagged.prototype.[Symbol.toStringTag]",
      "name": "Tagged.prototype.[Symbol.toStringTag]",
      "parentSymbolId": "computed-properties@1.0.0::Tagged",
      "kind": 173,
      "kindName": "PropertyDeclaration",
      "package": "computed-properties",
      "filePath": "index.d.ts",
      "signature": "[Symbol.toStringTag]: string;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "since": "2.1.0",
      "isInternal": false
    }
  ],
  "totalSymbols": 9,
  "totalFiles": 1,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
